# naomi

./: Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  configure.ac.bak  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: DPcommon.h  FPentrypoint.c  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  actions.c  actions.c~  callbacks.c  callbacks.c~  callbacks.h  callbacks.h~  daserfostscan  database.c  database.c~  database.h  database.h~  main.c  main.c~
src/.deps/: FPentrypoint.Po  actions.Po  callbacks.Po  database.Po  main.Po
src/data/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  crapos.ui  fingerDB.db  slamdok.ppm  winenroll.ui  winevent.ui  winevent_verify.ui  winreport.ui
src/desktop/: daserfost  daserfost.directory
